--- a/css/estilos.css
+++ b/css/estilos.css
@@ -43,28 +43,39 @@
 	padding: 15px;
 }
 
+
+
 /*estilos seccion central*/
 
 .section{
 	width: 100%;
-	min-height: 600px;
+	min-height: 500px;
 	display: flex;
 	flex-flow: row wrap;
+	
 }
 
 .section .seccion1{
 	width: 100%;
 	min-height: 300px;
-	background-color: #C6DE41;
+	background: url(../img/pexels-photo-459225.jpeg);
+	background-attachment: contain;
+	background-size: cover;
+	
 }
 .section .seccion2{
 	width: 50%;
-	min-height: 300px;
+	height: 200px;
 	background-color: #2D6E7E;
+	
+}
+
+.section .seccion2 img{
+	width: 100%;
 }
 .section .seccion3{
 	width: 50%;
-	min-height: 350px;
+	min-height: 200px;
 	background-color: #153B44;
 }
 
