--- a/css/estilos.css
+++ b/css/estilos.css
@@ -46,6 +46,10 @@
 	padding: 15px;
 }
 
+.header .nav a:nth-child(1){
+	text-decoration: none;
+}
+
 
 
 /*estilos seccion central*/
@@ -81,11 +85,13 @@
 .section .seccion2 img {
 	width: 80%;
 	max-width: 100% ;
+	border: 1px solid #fff;
 }
 
 .section .seccion3 img{
 	width: 80%;
 	max-width: 100% ;
+	border: 1px solid #fff;
 }
 
 /*estilos pie de pagina*/
