--- a/css/estilos.css
+++ b/css/estilos.css
@@ -86,14 +86,6 @@
 	width: 80%;
 	max-width: 100% ;
 	border: 1px solid #fff;
-	
-	
-}
-
-.seccion2 img:hover{
-	transform: rotate(10deg);
-	-webkit-filter: drop-shadow(2px 2px  #82c3a6);
-		filter: drop-shadow(2px 2px  #82c3a6);
 }
 
 .section .seccion3 img{
@@ -122,23 +114,24 @@
 
 .footer .pie1{
 	width: 25%;
+	border: 1px solid white;
 	padding: 15px;
 }
 
 
 .footer .pie2{
 	width: 25%;
+	border: 1px solid white;
 	padding: 15px;
 }
 .footer .pie3{
 	width: 25%;
+	border: 1px solid white;
 	padding: 15px;
-	text-align: center;
 }
-
-
 
 .footer .pie4{
 	width: 25%;
+	border: 1px solid white;
 	padding: 15px;
 }
