--- a/css/estilos_paisajes.css
+++ b/css/estilos_paisajes.css
@@ -1,3 +1,7 @@
+body{
+	background-color: #02010a;
+}
+
 *{
 	font-family: 'Dancing Script', cursive;
 	box-sizing: border-box;
@@ -7,7 +11,7 @@
 
 
 .principal{
-	width: 900px;
+	width: 100%;
 	margin: 0 auto;
 	display: flex;
 	flex-flow: row wrap;
@@ -25,7 +29,7 @@
 }
 
 .header .titulo{
-	width: 70%;
+	width: 60%;
 	
 }
 
@@ -37,7 +41,7 @@
 }
 
 .header .nav{
-	width: 30%;
+	width: 40%;
 }
 
 .header .nav a{
@@ -46,7 +50,7 @@
 	padding: 15px;
 }
 
-.header .nav a:nth-child(1){
+.header .nav a:nth-child(2){
 	text-decoration: none;
 }
 
@@ -56,57 +60,22 @@
 
 .section{
 	width: 100%;
-	min-height: 500px;
 	display: flex;
 	flex-flow: row wrap;
 }
 
-.section .seccion1{
-	width: 100%;
-	min-height: 300px;
-	background: url(../img/pexels-photo-459225.jpeg);
-	background-attachment: contain;
-	background-size: cover;
-	
-}
-.section .seccion2, .seccion3{
-	width: 50%;
-	height: 250px;	
-	border: 1px solid #FFFFFF;
-	background: #d5c75f;
+.section .seccion1, .seccion2, .seccion3, .seccion4, .seccion5, .seccion6 {
+	width: 33.3333%;
+	background-color: #d5c75f;
+	padding: 20px;
+	border: 1px solid white;  /*ojo borrar*/
 	display: flex;
-	flex-flow: column wrap;
-	justify-content: center;
 	align-items: center;
-	
+	justify-content: center;
 }
 
-
-.section .seccion2 img {
-	width: 80%;
-	max-width: 100% ;
-	border: 1px solid #fff;
-	
-	
-}
-
-.seccion2 img:hover{
-	-webkit-transform: rotate(10deg);
-	-ms-transform: rotate(10deg);
-	-webkit-filter: drop-shadow(2px 2px  #82c3a6);
-		filter: drop-shadow(2px 2px  #82c3a6);
-}
-
-.section .seccion3 img{
-	width: 80%;
-	max-width: 100% ;
-	border: 1px solid #fff;
-}
-
-.section .seccion3 img:hover{
-	transform: translate(20px, -5px);
-	-webkit-filter: drop-shadow(2px 2px  #82c3a6);
-		filter: drop-shadow(2px 2px  #82c3a6);
+.section img{
+	width: 90%;
 }
 
 /*estilos pie de pagina*/
@@ -141,4 +110,54 @@
 .footer .pie4{
 	width: 25%;
 	padding: 15px;
+}
+
+@media (max-width: 900px){
+
+
+}
+@media (max-width: 600px){
+
+	.header{
+		display: flex;
+		flex-flow: column wrap;
+		align-items: center;
+		align-content: center;
+	}
+	.header .titulo{
+		width: 100;
+	}
+	.header .nav{
+		width: 100%;
+		text-align: center;
+	}
+
+	.section{
+		display: flex;
+		flex-flow: column wrap;
+	}
+
+
+	.section .seccion1, .seccion2, .seccion3, .seccion4, .seccion5, .seccion6{
+		width: 100%;
+	}
+
+	.footer{
+		display: flex;
+		flex-flow: column wrap;
+
+	}
+
+	.footer .pie1{
+	width: 100%
+	}
+	.footer .pie2{
+	width: 100%
+	}
+	.footer .pie3{
+	width: 100%
+	}
+	.footer .pie4{
+	width: 100%
+	}
 }
